--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                    
                 </ul>
             </nav>
+            <div class="hero-image">
+                <img src="images/backgrimg.png.png">
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
