--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/download.png" class="logo"> 
+                <img src="images/tlogo.webp" class="logo"> 
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
