--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                    
                 </ul>
             </nav>
+            <div class="header-text">
+            <p>UI DEesigner</p>
+            <h1>Hi, I'm <span>Terry</span><br>Williams From Kenya</h1>
+        </div>
             <div class="hero-image">
                 <img src="images/backgrimg.png.png">
             </div>
