added some content styling and an image

--- a/index.html
+++ b/index.html
@@ -31,6 +31,29 @@
             </div>
         </div>
     </div>
+    <!---about me-->
+    <div id="about">
+        <div class="container">
+
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="images/pic2.jpg" >
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">About Me</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum magnam reiciendis quisquam fuga sit dolores deserunt, quidem eos perspiciatis, voluptas sunt, delectus dicta veniam quibusdam aliquid soluta error laborum perferendis?
+                    Modi placeat, harum vel ipsum tempore, aspernatur ea doloremque blanditiis rerum iure eos corrupti? Totam ea sapiente enim quaerat doloribus impedit similique porro eius corporis neque, maxime debitis aspernatur distinctio!</p>
+                    <div class="tab-titles">
+                        <p class="tab-links">Skills</p>
+                        <p class="tab-links">Experience</p>
+                        <p class="tab-links">Education</p>
+                    </div>
+                </div>
+<
+                
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
