--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/tlogo.webp" class="logo"> 
+                <img src="images/tlogo.png" class="logo"> 
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
@@ -102,8 +102,9 @@
         </div>
     </div>
 
-    <!-----services-->
+    
     <script>
+        //tab links and tab contents to display once you hover
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
     
