--- a/index.html
+++ b/index.html
@@ -92,9 +92,14 @@
                     <a href="#">Learn more</a>
                 </div>
                 <div>
-                    <h2>App Design</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero commodi officia, praesentium explicabo aut dolore rerum cumque vel omnis delectus laboriosam quasi necessitatibus enim itaque recusandae, iusto ipsam, voluptas exercitationem.
-                    Labore doloribus quos culpa sed magnam ipsum animi nisi, praesentium, fugiat cupiditate officia dolorem ea aliquam reprehenderit modi recusandae laboriosam molestiae nihil nulla excepturi necessitatibus iusto, veritatis velit! Possimus, quod.</p>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat earum vel dignissimos incidunt quisquam, atque blanditiis officia porro reprehenderit amet magni reiciendis quis ducimus ad eaque asperiores est itaque consectetur?</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
+                    <h2>UI Design</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat earum vel dignissimos incidunt quisquam, atque blanditiis officia porro reprehenderit amet magni reiciendis quis ducimus ad eaque asperiores est itaque consectetur?</p>
+                    <a href="#">Learn more</a>
                 </div>
 
             </div>
