added the hero image responsiveness

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Hi, I'm <span>Terry</span><br>Daniels From Kenya</h1>
         </div>
             <div class="hero-image">
-                <img src="images/backgrimg.png.png">
+                <img src="images/backgrimg.png.png" class="img">
             </div>
         </div>
     </div>
