added a whatsapp link

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="contact-left">
                         <h1 class="sub-title">Contact Me</h1>
                         <p><i class="fas fa-paper-plane"></i>shiroterry168@gmail.com</p>
-                        <p><i class="fa-sharp fa-solid fa-phone"></i>0705804540</p>
+                        <a href="https://wa.link/dmqml5"><p><i class="fa-sharp fa-solid fa-phone"></i></a>0705804540</p>
                         <div class="social-icons">
                             <a href=""><i class="fab fa-facebook"></i></a>
                             <a href=""><i class="fab fa-twitter-square"></i></a>
