--- a/index.html
+++ b/index.html
@@ -167,10 +167,13 @@
                     </div>
                     <div class="contact-right">
                         <form>
-                            <input type="text" name="name" placeholder="Your Name" required>
-                            <input type="email" name="email" placeholder="Your Email"required>
-                            <textarea name="message" rows="6" placeholder="Your Message"></textarea>
-                            <button type="submit" class="btn btn2">submit</button>
+                            <form action="contact.php" method="POST">
+                                <input type="text" name="name" placeholder="Your Name" required>
+                                <input type="email" name="email" placeholder="Your Email" required>
+                                <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
+                                <button type="submit" class="btn btn2">Submit</button>
+                            </form>
+                            
                         </form>
 
                     </div>
